Fix dropdown under a code cell in dark mode

--- a/sphinx_togglebutton/_static/togglebutton.css
+++ b/sphinx_togglebutton/_static/togglebutton.css
@@ -159,3 +159,8 @@ details.toggle-details[open] summary ~ * {
         display: none;
     }
 }
+
+/* Dropdown under a code cell in dark mode */
+[data-theme="dark"] details.hide.below-input summary span {
+  color: black !important;
+}
